testsuite/tests/th/T2713.stderr

T2713.hs:11:10: error:
    The fixity signature for ‘.*.’ lacks an accompanying binding
    Suggested fix:
      Move the fixity signature to the declaration site of ‘.*.’.

T2713.hs:12:1: error:
    The type signature for ‘f’ lacks an accompanying binding
    Suggested fix:
      Move the type signature to the declaration site of ‘f’.
